--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -2,9 +2,36 @@
  display: flex;
  justify-content: space-between;
  align-items: center;
+ padding: 1rem 1.5rem;
 }
 
 .h1 {
  color: var(--White);
  text-transform: uppercase;
+}
+
+.hr {
+ width: 100%;
+ height: .0625rem;
+ background-color: var(--White);
+ opacity: .2;
+}
+
+@media (min-width: 601px) {
+ .hamburger {
+  display: none;
+ }
+}
+
+@media (min-width: 601px) and (max-width: 1024px) {
+ .header {
+  justify-content: center;
+  padding: 2rem 0;
+ }
+}
+
+@media (min-width: 1025px) {
+ .header {
+  padding: 1.5rem 2rem;
+ }
 }
