--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -10,21 +10,32 @@
 }
 
 .hr {
- width: 100%;
- height: .0625rem;
- background-color: var(--White);
+ border: .03rem solid var(--White);
  opacity: .2;
+}
+
+.hamburger {
+ opacity: 24.87%;
+}
+
+.tabletNavBar {
+ display: none;
 }
 
 @media (min-width: 601px) {
  .hamburger {
   display: none;
  }
+
+ .tabletNavBar {
+  display: block;
+ }
 }
 
 @media (min-width: 601px) and (max-width: 1024px) {
  .header {
   justify-content: center;
+  flex-direction: column;
   padding: 2rem 0;
  }
 }
