--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -18,17 +18,9 @@
  opacity: 24.87%;
 }
 
-.tabletNavBar {
- display: none;
-}
-
 @media (min-width: 601px) {
  .hamburger {
   display: none;
- }
-
- .tabletNavBar {
-  display: block;
  }
 }
 
@@ -36,12 +28,16 @@
  .header {
   justify-content: center;
   flex-direction: column;
-  padding: 2rem 0;
+  padding-top: 2rem;
  }
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 1240px) {
  .header {
-  padding: 1.5rem 2rem;
+  padding: 0rem 2rem;
+ }
+
+ .h1 {
+  font-size: 2.5rem;
  }
 }
