--- a/src/components/navLink/navLink.module.css
+++ b/src/components/navLink/navLink.module.css
@@ -36,9 +36,28 @@
   display: none;
  }
 
+ .li {
+  border: 4px solid transparent;
+ }
+
+ .li:hover {
+  cursor: pointer;
+  border-top: 4px solid var(--hoverColor);
+ }
+ .li:hover .p {
+  opacity: 100%;
+ }
+
  .p {
   font-size: .6875rem;
   line-height: 1.5625rem;
   letter-spacing: 1px;
+  opacity: 75%;
+ }
+}
+
+@media (min-width: 1240px) {
+ .p {
+  font-size: 1rem;
  }
 }
