--feat:: add keyboard accessibility to the header component

--- a/src/components/navLink/navLink.module.css
+++ b/src/components/navLink/navLink.module.css
@@ -5,6 +5,11 @@
  padding: 1.5rem;
 }
 
+.li:focus-visible {
+ outline: 1px yellow dotted;
+ outline-offset: .125rem;
+}
+
 .div {
  display: flex;
  align-items: center;
