--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -5,8 +5,19 @@
  padding: 1rem 1.5rem;
 }
 
+.header:focus-visible {
+ outline: 1px yellow dotted;
+ outline-offset: .125rem;
+}
+
+
 .h1 {
  text-transform: uppercase;
+}
+
+.h1:focus-visible {
+ outline: 1px yellow dotted;
+ outline-offset: .125rem;
 }
 
 .hr {
@@ -16,6 +27,11 @@
 
 .hamburger {
  opacity: 24.87%;
+}
+
+.hamburger:focus-visible {
+ outline: .0625rem yellow dotted;
+ outline-offset: .125rem;
 }
 
 @media (min-width: 601px) {
