--style tweaks to header component

--- a/src/components/navLink/navLink.module.css
+++ b/src/components/navLink/navLink.module.css
@@ -36,23 +36,25 @@
  opacity: 10%;
 }
 
+
+/* > TAB SCREENS */
 @media (min-width: 601px) {
  .roundedDiv, .arrowRightIcon, .hr {
   display: none;
  }
 
  .li {
-  border: 4px solid transparent;
   padding: 1.5rem 0; 
+  position: relative;
+  transition: all 0.3s ease-in-out ;
+  cursor: pointer;
  }
 
- .li:hover {
-  cursor: pointer;
-  border-top: 4px solid var(--hoverColor);
- }
- .li:hover .p {
-  opacity: 100%;
- }
+ /* .li:hover {
+  border: 1px solid var(--hoverColor);
+ } */
+
+
 
  .p {
   font-size: .6875rem;
@@ -62,8 +64,26 @@
  }
 }
 
-@media (min-width: 1240px) {
+/* > LAPTOP SCREENS */
+@media (min-width: 1025px) {
  .p {
   font-size: 1rem;
+ }
+
+ .li::after {
+  content: '';
+  position: absolute;
+  top: -1rem;
+  width: 0%;
+ }
+
+ .li:hover::after {
+  width: 100%;
+  height: 4px;
+  background-color: var(--hoverColor);
+ }
+
+ .li:hover .p {
+  opacity: 100%;
  }
 }
