--- a/src/components/content/Content.module.css
+++ b/src/components/content/Content.module.css
@@ -1,3 +1,28 @@
-.ul-m {
+.nav {
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ padding: 1rem 1.5rem;
+ border: 1px solid green;
+}
 
+.ul{
+ display: flex;
+ gap: 2rem;
+ list-style: none;
+ font-size: .875rem;
+ font-weight: 500;
+ text-transform: uppercase;
+ color: rgba(255, 255, 255, 0.5);
+ border: 1px solid red;
+
+}
+
+@media (max-width: 600px) {
+ .ul {
+   font-size: .75rem;
+   font-weight: 500;
+   text-transform: uppercase;
+   color: rgba(255, 255, 255, 0.5);
+ }
 }
