--- a/src/components/navBar/NavBar.module.css
+++ b/src/components/navBar/NavBar.module.css
@@ -1,5 +1,6 @@
 .nav {
- margin: 1.5rem;
+ margin: 0 ;
+ padding: 1rem;
 }
 
 @media (min-width: 601px) {
@@ -11,6 +12,6 @@
  }
 
   .nav {
-   margin: 1.5rem 1rem;
+   margin: 0rem 0rem;
   }
 }
