--- a/src/components/tabs/Tabs.module.css
+++ b/src/components/tabs/Tabs.module.css
@@ -1,3 +1,25 @@
-.p {
- 
+
+@media (max-width: 600px) {
+.li {
+  position: relative;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+ }
+
+ .li::after {
+  content: '';
+  position: absolute;
+  bottom: -1rem;
+  width: 0%;
+ }
+
+ .li:hover::after {
+  width: 100%;
+  height: 4px;
+  background-color: var(--hoverColor);
+ }
+
+ .li:hover .p {
+  opacity: 100%;
+ }
 }
