--- a/src/components/content/Content.module.css
+++ b/src/components/content/Content.module.css
@@ -1,3 +1,10 @@
+.contentDiv {
+  display: flex;
+  flex-direction: column;
+  gap: 4.5rem;
+  margin-bottom: 2rem;
+}
+
 .nav {
  display: flex;
  justify-content: center;
@@ -9,13 +16,61 @@
  display: flex;
  align-items: center;
  justify-content: space-between;
- /* gap: 2.5rem; */
  list-style: none;
  font-size: .875rem;
  font-weight: 500;
  text-transform: uppercase;
  color: rgba(255, 255, 255, 0.5);
  width: 80%;
+}
+
+.figure img {
+  display: block;
+  margin: auto;
+  width: 50%;
+  max-width: 100%;
+  height: auto;
+}
+
+.planetDetailDiv {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding: 0 1.5rem;
+}
+
+.h2 {
+  text-transform: uppercase;
+  font-weight: var(--Regular);
+}
+
+.p {
+  font-weight: 300;
+  font-size: .875rem;
+  color: rgba(255, 255, 255, 0.8);
+  line-height: 1.375rem;
+}
+
+.source {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: .3rem;
+  color: var(--SlateGray);
+  font-weight: 300;
+  font-size: .875rem;
+}
+
+.source a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: .2rem;
+  color: var(--SlateGray);
+  font-weight: var(--Medium);
 }
 
 
@@ -30,7 +85,46 @@
 
  .ul {
    font-size: .75rem;
-   color: rgba(255, 255, 255, 0.5);
    padding: 1rem 0;
  }
+}
+
+/* >TAB SCREENS */
+@media (min-width: 601px) {
+  .contentDiv {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto auto;
+    grid-template-areas: 
+      'figure figure'
+      'planetDetailDiv nav';
+    gap: 2rem;
+    place-content: center;
+    justify-content: space-between;
+    padding: 5rem 2.5rem;
+    margin-top: 2rem;
+  }
+
+  .figure {
+    grid-area: figure;
+    margin-bottom: 4rem;
+  }
+
+  .planetDetailDiv {
+    text-align: left;
+    align-items: flex-start;
+    padding: 0;
+  }
+
+  .nav {
+    grid-area: nav;
+  }
+
+  .ul {
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    gap: 1rem;
+    color: var(--White);
+  }
 }
