--- a/src/components/article/Article.module.css
+++ b/src/components/article/Article.module.css
@@ -26,5 +26,32 @@
 
 .article article > p {
  font-family: var(--Antonio);
- font-size: 20px;
+ font-size: 1.25rem;
+ letter-spacing: -0.75px;
+ line-height: 1.6175rem;
+}
+
+/* >TAB SCREENS */
+@media (min-width: 601px) {
+ .article {
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0;
+ }
+
+ .article article {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+  padding: 1rem;
+ }
+
+ .article article > p {
+  font-family: var(--Antonio);
+  font-size: 1.5rem;
+  letter-spacing: -0.9px;
+  line-height: 1.94rem;
+ }
+ 
 }
