--- a/src/components/content/Content.module.css
+++ b/src/components/content/Content.module.css
@@ -29,7 +29,6 @@
   margin: auto;
   width: 50%;
   max-width: 100%;
-  height: auto;
 }
 
 .planetDetailDiv {
@@ -94,15 +93,16 @@
   .contentDiv {
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto;
     grid-template-areas: 
       'figure figure'
-      'planetDetailDiv nav';
-    gap: 2rem;
+      'planetDetailDiv nav'
+      'articleDiv articleDiv';
+    gap: 0;
     place-content: center;
-    justify-content: space-between;
-    padding: 5rem 2.5rem;
-    margin-top: 2rem;
+    align-items: center;
+    margin-top: 4rem;
+    width: 90%;
   }
 
   .figure {
@@ -118,6 +118,8 @@
 
   .nav {
     grid-area: nav;
+    padding: 0;
+    margin-left: 3rem;
   }
 
   .ul {
@@ -126,5 +128,10 @@
     width: 100%;
     gap: 1rem;
     color: var(--White);
+  }
+
+  .articleDiv {
+    grid-area: articleDiv;
+    margin-top: 3rem;
   }
 }
