--- a/src/components/navLink/navLink.module.css
+++ b/src/components/navLink/navLink.module.css
@@ -3,6 +3,8 @@
  align-items: center;
  justify-content: space-between;
  padding: 1.5rem;
+ text-decoration: none;
+ color: inherit;
 }
 
 .li:focus-visible {
