--- a/src/components/navBar/NavBar.module.css
+++ b/src/components/navBar/NavBar.module.css
@@ -2,6 +2,46 @@
   margin: 0;
 }
 
+.li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem;
+  text-decoration: none;
+  color: inherit;
+}
+
+.li:focus-visible {
+  outline: 1px yellow dotted;
+  outline-offset: .125rem;
+}
+
+.div {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.roundedDiv {
+  width: 1.25rem;
+  height: 1.25rem;
+  border-radius: 50%;
+}
+
+.p {
+  text-transform: uppercase;
+}
+
+.arrowRightIcon {
+  width: .4rem;
+  height: .5rem;
+}
+
+.hr {
+  border: .03rem solid var(--White);
+  opacity: 10%;
+}
+
 /* MOBILE SCREENS ONLY */
 @media (max-width: 600px) {
   .nav {
@@ -23,9 +63,54 @@
   }
 
   .ul {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .roundedDiv,
+  .arrowRightIcon,
+  .hr {
+    display: none;
+  }
+  
+  .li {
+    padding: 1.5rem 0;
+    position: relative;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+  }
+
+  .li::after {
+    content: '';
+    position: absolute;
+    top: -1rem;
+    width: 0%;
+  }
+
+  .li:hover::after {
+    width: 100%;
+    height: .25rem;
+    background-color: var(--hoverColor);
+  }
+
+  .li:hover .p {
+    opacity: 100%;
+  }
+
+  .p {
+    font-size: .85rem;
+    font-weight: var(--Medium);
+    line-height: 1.5625rem;
+    letter-spacing: 1px;
+    opacity: 75%;
+  }
+}
+
+/* > BIG SCREENS */
+@media (min-width: 1025px) {
+  .p {
+    font-size: 1rem;
   }
 }
