--fix:: correctly render styling for active links to planets in navbar component for tab and laptop view

--- a/src/components/tabs/Tabs.module.css
+++ b/src/components/tabs/Tabs.module.css
@@ -1,6 +1,6 @@
 
 @media (max-width: 600px) {
-  .li, .active {
+  .li {
     position: relative;
     transition: all 0.3s ease-in-out;
     cursor: pointer;
