--- a/src/components/navBar/NavBar.module.css
+++ b/src/components/navBar/NavBar.module.css
@@ -82,20 +82,20 @@
     cursor: pointer;
   }
 
-  .li::after {
+  .li::after{
     content: '';
     position: absolute;
     top: -1rem;
     width: 0%;
   }
 
-  .li:hover::after {
+  .li:hover::after, .active::after {
     width: 100%;
     height: .25rem;
     background-color: var(--hoverColor);
   }
 
-  .li:hover .p {
+  .li:hover .p, .active .p{
     opacity: 100%;
   }
 
