--fix:: render the background stars and cleanup

--- a/src/components/content/Content.module.css
+++ b/src/components/content/Content.module.css
@@ -73,6 +73,10 @@
   font-weight: var(--Medium);
 }
 
+.contentDiv, .figure, .figure img, .planetDetailDiv, .articleDiv {
+  background-color: transparent;
+}
+
 
 /* MOBILE SCREENS */
 @media (max-width: 600px) {
