--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -3,6 +3,7 @@
  justify-content: space-between;
  align-items: center;
  padding: 1rem 1.5rem;
+ background-color: transparent;
 }
 
 .header:focus-visible {
