--- a/src/components/article/Article.module.css
+++ b/src/components/article/Article.module.css
@@ -31,6 +31,11 @@
  line-height: 1.6175rem;
 }
 
+.article, .article article {
+  background-color: transparent;
+}
+
+
 /* >TAB SCREENS */
 @media (min-width: 601px) {
  .article {
