--- a/src/components/tabs/Tabs.module.css
+++ b/src/components/tabs/Tabs.module.css
@@ -22,6 +22,10 @@
   .active p, .li:hover p{
     color: var(--White);
   }
+
+  .li, .p {
+    background: transparent;
+  }
 }
 
 @media (min-width: 601px) {
