--- a/src/index.css
+++ b/src/index.css
@@ -40,18 +40,7 @@ body {
   font-size: .875rem;
   line-height: 1.5625rem;
   color: var(--White);
-  background-image: url("./assets/background-stars.svg");
-  background-size: cover;
-  height: 100vh;
-  background-position: center;
 }
-
-/* .text-xl {
-  font-family: var(--Antonio);
-  font-weight: var(--Medium);
-  font-size: 5rem;
-  line-height: 6.4375rem;
-} */
 
 .text-xl {
   font-family: var(--Antonio);
@@ -89,11 +78,5 @@ main {
  display: flex;
  align-items: center;
  justify-content: center;
+ background-color: transparent;
 }
-
-/* MOBILE SCREENS */
-/* @media (min-width: 601px) {
-  .text-medium {
-    font-size: ;
-  }
-} */
